--- a/playbooks/windows/install-checkmk-agent.yml
+++ b/playbooks/windows/install-checkmk-agent.yml
@@ -25,6 +25,6 @@
     - name: Registering Agent
       ansible.windows.win_command: 
         argv:
-        - C:\Program Files (x86)\checkmk\service\cmk-agent-ctl.exe register --hostname {{ ansible_hostname }}.secnetwork.org --server hqmon1.secnetwork.org --site secnet --trust-cert
+        - "C:\Program Files (x86)\checkmk\service\cmk-agent-ctl.exe" register --hostname {{ ansible_hostname }}.secnetwork.org --server hqmon1.secnetwork.org --site secnet --trust-cert
 
 
