--- a/playbooks/windows/install-checkmk-agent.yml
+++ b/playbooks/windows/install-checkmk-agent.yml
@@ -24,7 +24,6 @@
 
     - name: Registering Agent
       ansible.windows.win_command: 
-        argv:
-        - "C:\Program Files (x86)\checkmk\service\cmk-agent-ctl.exe" register --hostname {{ ansible_hostname }}.secnetwork.org --server hqmon1.secnetwork.org --site secnet --trust-cert
+        cmd: '"C:\Program Files (x86)\checkmk\service\cmk-agent-ctl.exe" register --hostname {{ ansible_hostname }}.secnetwork.org --server hqmon1.secnetwork.org --site secnet --trust-cert'
 
 
