--- a/testing.yml
+++ b/testing.yml
@@ -13,7 +13,7 @@
       private: yes
 
   tasks:
-    - name: Registering '{{ item.name }}'
+    - name: Registering
       hosts: '{{ item.name }}'
       gather_facts: yes
       become: true
