--- a/playbooks/firewall/test_policy_security_01_unauthorized_traffic.yml
+++ b/playbooks/firewall/test_policy_security_01_unauthorized_traffic.yml
@@ -34,7 +34,7 @@
     - name: Creating Security Policies
       panos_security_rule:
         provider: '{{ provider }}'
-        rule_name: 'Prevent RFC1918 to WAN'
+        rule_name: '{{ item.name }}'
         description: 'Managed by Ansible'
         tag_name: '{{ item.tag_name }}'
         group_tag: '{{ item.group_tag }}'
@@ -50,3 +50,4 @@
         log_start: '{{ item.log_start }}'
         log_end: '{{ item.log_end }}'
         location: '{{ item.location }}'
+      with_items: '{{ create_policy_security }}'
