--- a/playbooks/firewall/test_policy_security_01_unauthorized_traffic.yml
+++ b/playbooks/firewall/test_policy_security_01_unauthorized_traffic.yml
@@ -27,7 +27,7 @@
       action: 'deny'
       log_start: 'yes'
       log_end: 'no'
-      location: 'top'
+      #location: 'top'
 
   tasks:
     - name: Creating Security Policies
